[project]
name = "datetime-python"
version = "0.1.0"
description = "Estudo sobre o módulo datetime e padrão Singleton em linguagem Python."
authors = [
    {name = "jcarlossc",email = "jcarlossc1977@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "datetime_python", from = "src"}]

[tool.poetry.scripts]
calendario = "datetime_python.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
